[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bist-extractor"
version = "0.2.0"
description = "BIST100 extractor"
readme = "README.md"
authors = [{name = "Serkan"}]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
  "urllib3>=1.26",
  "openpyxl>=3.1",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.9",
  "black>=24.0",
]

[tool.setuptools]
packages = ["bist_extractor"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]
fix = true
exclude = ["data/"]